--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,17 +19,16 @@ services:
       - DB_HOST=mysql
       - DB_NAME=portfolio_db
       - DB_USER=root
-      - DB_PASS=root
+      - DB_PASS=rootpass
     depends_on:
       - mysql
 
   mysql:
     image: mysql:5.7
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_DATABASE: portfolio_db
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      
     volumes:
       - db_data:/var/lib/mysql
       - ./mysql/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
