--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - mysql
 
   php:
-    image: php:8.2-fpm
+    image: ./php
     volumes:
       - ./app:/var/www/html:cached
     environment:
