--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - mysql
 
   php:
-    image: ./php
+    build:
+        image: ./php
+        dockerfile: Dockerfile
     volumes:
       - ./app:/var/www/html:cached
     environment:
